backend-flower.yml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: mongodb
  namespace: chandu-ns   
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 2
      maxSurge: 2
  selector:
    matchLabels:
      app: mongo
  template:
    metadata:
      labels:
        app: mongo
    spec:
      containers:
        - name: mongo-back
          image: mongo
          ports:
            - containerPort: 27017
---

apiVersion: v1
kind: Service
metadata:
  name: mongo-service
  namespace: chandu-ns
spec:
  selector:
    app: mongo
  ports:
    - port: 27017
      targetPort: 27017
  type: ClusterIP
