kgatway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: flower-rt
  namespace: chandu-ns
 
spec:
  parentRefs:
    - name: kgateway1
  rules: #path based routing
    - matches:
      - path:
          type: PathPrefix
          value: /
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /
      backendRefs:
        - name: ey-ser
          port: 3015
